Teaser -> breakpoint 416, fullbleed teaser image fix

--- a/source/widgets/teaser/teaser.scss
+++ b/source/widgets/teaser/teaser.scss
@@ -120,7 +120,7 @@
 		margin-bottom: 0;
 	}
 
-	@include mq($to: 374px) {
+	@include mq($to: 416px) {
 		left: 0;
 		width: 100%;
 		height: auto !important;
